# MCLauncher

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
docs/: DOC_CONTRIBUTING.md
examples/: mc-api-neoforge-example.rs  mc-oauth-example.rs  modrinth-api-example.rs  root-example.rs
installer/: Cargo.toml
installer/src/: lib.rs
installer/src/asyncuntil/: mod.rs
mc-api/: Cargo.toml
mc-api/src/: fabric.rs  fetcher.rs  lib.rs  neoforge.rs  official.rs
mc-oauth/: Cargo.toml
mc-oauth/src/: lib.rs
modrinth-api/: Cargo.toml
modrinth-api/src/: lib.rs
scripts/: install.conf  install.ps1  install.sh
src/: lib.rs  main.rs
src/api/: fabric.rs  mod.rs  official.rs
src/asyncuntil/: mod.rs
src/config/: account.rs  locked.rs  mod.rs  mod_manage.rs  path.rs  runtime.rs  user.rs
src/install/: fabric.rs  installer.rs  mavencoord.rs  mc_installer.rs  mod.rs  neoforge.rs  vanilla.rs
src/mcargument/: mod.rs
src/modmanage/: mod.rs
src/runtime/: mod.rs
