workspace = { members = ["installer", "mc-api", "modrinth-api"] }
[package]
name = "launcher"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
bytes = "1.10.0"
clap = { version = "4.5.31", features = ["derive"] }
env_logger = "0.11.6"
futures = "0.3.31"
hex = "0.4.3"
indicatif = "0.17.11"
log = "0.4.26"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sha1 = "0.10.6"
sha256 = "1.5.0"
tabled = "0.18.0"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
version-compare = "0.2.0"
walkdir = "2.5.0"
zip = "2.2.3"

[dependencies.uuid]
version = "1.15.1"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.mc-api]
path = "mc-api"

[dependencies.modrinth-api]
path = "modrinth-api"

[dependencies.installer]
path = "installer"
