workspace = { members = ["installer", "mc-api", "mc-oauth", "modrinth-api"] }
[package]
name = "gluon"
version = "0.6.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
bytes = "1.10.0"
clap = { version = "4.5.31", features = ["derive"] }
clap-cargo = "0.18.3"
env_logger = "0.11.6"
futures = "0.3.31"
hex = "0.4.3"
indicatif = "0.18.0"
log = "0.4.26"
regex = "1.11.1"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sha1 = "0.11.0"
sha256 = "1.5.0"
tabled = "0.20.0"
tokio = { version = "1.43.0", features = ["full"] }
toml = "1.0.3"
vecmap = "0.1.0"
version-compare = "0.2.0"
walkdir = "2.5.0"
zip = "8.1.0"

[dependencies.uuid]
version = "1.15.1"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.mc-api]
path = "mc-api"

[dependencies.modrinth-api]
path = "modrinth-api"

[dependencies.installer]
path = "installer"

[dependencies.mc-oauth]
path = "mc-oauth"

[lints.clippy]
pedantic = "deny"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
