workspace = { members = ["installer", "mc-api", "mc-oauth", "modrinth-api"] }
[package]
name = "gluon"
version = "0.8.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
clap = { version = "4.6.0", features = ["derive"] }
clap-cargo = "0.18.3"
env_logger = "0.11.10"
futures = "0.3.32"
hex = "0.4.3"
indicatif = "0.18.4"
log = "0.4.29"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.11.0"
sha256 = "1.6.0"
tabled = "0.20.0"
tokio = { version = "1.51.1", features = ["full"] }
toml = "1.1.2"
vecmap = "0.1.0"
version-compare = "0.2.1"
walkdir = "2.5.0"
zip = "8.5.1"

[dependencies.uuid]
version = "1.23.0"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.mc-api]
path = "mc-api"

[dependencies.modrinth-api]
path = "modrinth-api"

[dependencies.installer]
path = "installer"

[dependencies.mc-oauth]
path = "mc-oauth"

[lints.clippy]
pedantic = "deny"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
