[package]
name = "installer"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
futures = "0.3.32"
hex = "0.4.3"
indicatif = "0.18.4"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
sha1 = "0.11.0"
tokio = { version = "1.51.1", features = ["full"] }

[lints.clippy]
pedantic = "deny"
