[package]
name = "mc-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
env_logger = "0.11.3"
hex = "0.4.3"
log = "0.4.21"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["blocking","json"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
sha1 = "0.10.6"
