[package]
name = "mc-api"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
env_logger = "0.11.10"
hex = "0.4.3"
log = "0.4.29"
quick-xml = { version = "0.39.2", features = ["serialize"] }
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.11.0"
zip = "8.5.1"

[lints.clippy]
pedantic = "deny"
