[package]
name = "mc-oauth"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
env_logger = "0.11.9"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["blocking", "form", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[lints.clippy]
pedantic = "deny"
