[package]
name = "modrinth-api"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.51.1", features = ["full"] }

[lints.clippy]
pedantic = "deny"
